# topic-modeling-youtube

./: .gitignore  README.md  app.py  main.py  pyproject.toml  requirements.txt
src/: modeling_methods.py  preprocessing.py  topic_naming.py  utils.py
src/modeling/: BERTopic.py  __init__.py  lda.py  nmf.py
templates/: index.html
