[project]
name = "topic-modeling-youtube"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "bertopic>=0.16.0",
    "flask>=3.0.0",
    "gensim>=4.3.0",
    "nltk>=3.8.0",
    "scikit-learn>=1.3.0",
    "sentence-transformers>=2.2.0",
    "spacy>=3.7.0",
    "umap-learn>=0.5.0",
    "yt-dlp>=2024.1.0",
]
